--- a/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true">
@@ -10,17 +11,26 @@
       android:id="@+id/preview_view"
       android:layout_width="match_parent"
       android:layout_height="0dp"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintBottom_toTopOf="@+id/control"/>
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
   <com.google.mlkit.vision.demo.GraphicOverlay
       android:id="@+id/graphic_overlay"
       android:layout_width="0dp"
       android:layout_height="0dp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="@id/preview_view"
       app:layout_constraintRight_toRightOf="@id/preview_view"
-      app:layout_constraintTop_toTopOf="@id/preview_view"
-      app:layout_constraintBottom_toBottomOf="@id/preview_view"/>
+      app:layout_constraintTop_toTopOf="@id/preview_view" />
+
+  <Button
+      android:id="@+id/inference_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Button"
+      app:layout_constraintBottom_toTopOf="@+id/control"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/preview_view" />
 
   <include
       android:id="@+id/settings_button"
@@ -30,22 +40,13 @@
       app:layout_constraintRight_toRightOf="@id/preview_view"
       app:layout_constraintTop_toTopOf="@id/preview_view" />
 
-  <Button
-      android:id="@+id/inference_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Button"
-      app:layout_constraintBottom_toBottomOf="@+id/preview_view"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/preview_view" />
-
   <LinearLayout
       android:id="@id/control"
       android:layout_width="match_parent"
       android:layout_height="60dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:background="#000"
-      android:orientation="horizontal">
+      android:background="#00000000"
+      android:orientation="horizontal"
+      app:layout_constraintBottom_toBottomOf="parent">
 
     <ToggleButton
         android:id="@+id/facing_switch"
@@ -55,14 +56,14 @@
         android:background="@layout/toggle_style"
         android:checked="false"
         android:textOff=""
-        android:textOn=""/>
+        android:textOn="" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_weight="1" />
 
   </LinearLayout>
 
