--- a/app/src/main/res/layout/spinner_style.xml
+++ b/app/src/main/res/layout/spinner_style.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="1dip"
-    android:gravity="center"
+    android:gravity="right"
     android:textColor="#FFF"
     android:textSize="16sp"/>
