--- a/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
@@ -28,30 +28,20 @@
       app:layout_constraintRight_toRightOf="@id/preview_view"
       app:layout_constraintTop_toTopOf="@id/preview_view" />
 
-  <Button
-      android:id="@+id/inference_button"
-      android:layout_width="80dp"
-      android:layout_height="80dp"
-      android:layout_marginBottom="80dp"
-      android:background="@drawable/inference_button_shape"
-      app:layout_constraintBottom_toBottomOf="@+id/preview_view"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/preview_view" />
 
   <ToggleButton
       android:id="@+id/facing_switch"
       android:layout_width="48dp"
       android:layout_height="48dp"
       android:layout_gravity="center_vertical"
-      android:layout_marginEnd="40dp"
-      android:layout_marginRight="40dp"
+      android:layout_marginBottom="80dp"
       android:background="@layout/toggle_style"
       android:checked="false"
       android:textOff=""
       android:textOn=""
-      app:layout_constraintBottom_toBottomOf="@+id/inference_button"
-      app:layout_constraintEnd_toStartOf="@+id/inference_button"
-      app:layout_constraintTop_toTopOf="@+id/inference_button" />
+      app:layout_constraintBottom_toBottomOf="@+id/preview_view"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/preview_view" />
 
   <LinearLayout
       android:id="@id/control"
@@ -60,7 +50,7 @@
       android:background="#00000000"
       android:orientation="horizontal"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toStartOf="@+id/inference_button">
+      app:layout_constraintEnd_toStartOf="@+id/facing_switch">
 
     <Spinner
         android:id="@+id/spinner"
